# Quickstart

./: .gitignore  Cargo.toml
src/: main.rs
templates/backend/actix/: Cargo.toml  README.md
templates/backend/actix/src/: main.rs
templates/backend/express/: README.md  index.js  package.json
templates/backend/fastapi/: main.py
templates/backend/flask/: README.md  main.py
templates/frontend/vanilla/: script.mjs  style.css  synapse-button.css  synapse-button.mjs  synapse-session.mjs
