[package]
name = "synapse-quickstart"
version = "0.1.0"
edition = "2021"
authors = ["Mathéo Tripnaux-Moreau <matheo@paradoxe.tech>"]
description = "A CLI tool to quickly generate a new Synapse project"
license = "MIT"

[dependencies]
inquire = "0.6"
include_dir = "0.7"
serde = { version = "1.0", features = ["derive"] }
fs_extra = "1.2"