[package]
name = "your-project-name"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"